--- a/interactiveDiary/index.html
+++ b/interactiveDiary/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   </head>
+  <script src="https://cdn.jsdelivr.net/npm/leader-line-new@1.1.9/leader-line.min.js"></script>
   <style>
       *{
         box-sizing: border-box;
@@ -45,6 +46,7 @@
 }
     </style>
   <body>
+    <div id="placeholder"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
